--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,3 +19,5 @@ jobs:
         node-version: 18.x
         cache: 'npm'
     - run: npm install
+    - name: Run integration tests
+      run: npm test
