--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,9 +9,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 18.x
@@ -24,6 +22,7 @@ jobs:
       run: npm test
   deploy:
     needs: build
+    # if: github.event_name = 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to production
